# master

./: CMakeLists.txt
experiments/: CMakeLists.txt  experiments.cpp
header/ggc/decl/: algorithm.hpp  algorithm_fwd.hpp  node.hpp  node_fwd.hpp  state.hpp  state_fwd.hpp
include/: algorithm.hpp  node.hpp  state.hpp
include/ggc/: algorithm  algorithm_fwd  node  node_fwd
profiler/: CMakeLists.txt  main.cpp  profiler.cpp
profiler/utility/: console.hpp
src/: CMakeLists.txt  algorithm.hpp  algorithm_free_impl.cpp  algorithm_impl.cpp  algorithm_member_impl.cpp  node.hpp  node_free_impl.cpp  node_member_impl.cpp  state.hpp  state_free_impl.cpp
src/ggc/impl/: algorithm.cpp  node.cpp  state.cpp
src/impl/: algorithm.cpp  state.cpp  state_free.cpp
src/test/: CMakeLists.txt  algorithm_heavy_test.cpp  algorithm_test.cpp  node_test.cpp  state_test.cpp
test/: CMakeLists.txt  algorithm.cpp  node.cpp
test/profile/: CMakeLists.txt  profiler.cpp
test/profile/utility/: console.hpp
test/unit/: algorithm.cpp  node.cpp  state.cpp
